--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.spurint.maven.plugins</groupId>
   <artifactId>scala-cross-maven-plugin</artifactId>
-  <version>0.2.0</version>
+  <version>0.2.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Scala Cross Maven Plugin</name>
@@ -32,7 +32,7 @@
     <connection>scm:git:https://github.com/kelnos/scala-cross-maven-plugin</connection>
     <developerConnection>scm:git:git@github.com:kelnos/scala-cross-maven-plugin.git</developerConnection>
     <url>https://github.com/kelnos/scala-cross-maven-plugin</url>
-    <tag>v0.2.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
