Fix maven-plugin dependency versions
Seems like I mixed something up when resolving the scala-steward
conflicts.

--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven-plugin-annotations.version>3.6.3</maven-plugin-annotations.version>
+    <maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
     <maven-plugin-api.version>3.6.3</maven-plugin-api.version>
+    <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
     <maven-project.version>3.0-alpha-2</maven-project.version>
     <plexus-utils.version>3.2.1</plexus-utils.version>
     <scala.binary.version>2.12</scala.binary.version>
@@ -144,7 +145,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-plugin-plugin</artifactId>
-        <version>${maven-plugin-api.version}</version>
+        <version>${maven-plugin-plugin.version}</version>
         <configuration>
           <goalPrefix>scala-cross</goalPrefix>
           <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
